# mpi

./: CMakeLists.txt  README.md
figures/: pi_hse_test_1.csv  pi_hse_test_1.gnuplot  pi_hse_test_1_speedup.csv  pi_hse_test_1_speedup.gnuplot  pi_hse_test_1_speedup.pl  pi_hse_test_2.csv  pi_hse_test_2.gnuplot  pi_hse_test_2_full.csv  pi_hse_test_2_speedup.csv  pi_hse_test_2_speedup.gnuplot  pi_hse_test_2_speedup.pl  throughput.py
include/: check.h  topology.h
src/: latency.cpp  pi.cpp  pi.pl  pi_amdahl.pl  throughput.cpp  topology.cpp
